tests/ui/simd/repr-simd-on-enum.stderr
error: the `repr(simd)` attribute cannot be used on enums
  --> $DIR/repr-simd-on-enum.rs:5:3
   |
LL | #[repr(simd)]
   |   ^^^^^^^^^^
   |
   = help: the `repr(simd)` attribute can only be applied to structs

error: aborting due to 1 previous error

